# faking-cli

./: .gitignore  Cargo.toml  README.md
schemas/: testcase.json
src/: file_reader.rs  list_subcommand.rs  main.rs  solo_generator.rs
src/data_faking_bridge/: assoc.rs
src/json_reader/: args_array.rs  args_null.rs  deserialize.rs  mod.rs  obj.rs  row.rs
src/output_formats/: json.rs
