[package]
name = "faking"
version = "1.0.0"
edition = "2021"
description = "faking is a cli tool that generates test data in various formats from a given schema"
license = "MPL-2.0"
# homepage = ""
repository = "https://github.com/Data-Construct/faking-cli"
keywords = ["cli"]
categories = ["command-line-utilities", "development-tools"] # "encoding"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
data-faking = "0.1.1"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
